<resources>
    <string name="app_name">Food Keep</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Records_and_goals">Records \u0026 Goals</string>
    <string name="main_activity_new">New</string>
    <string name="main_activity_new_entry_manual">Manual Entry (100G, 100ML)</string>
    <string name="main_activity_new_entry_barcode">Scan Barcode</string>
    <string name="main_activity_new_entry_options_title">What would you like to do?</string>
    <string name="main_activity_new_entry_weight_not_saved">Please enter a valid weight</string>
    <string name="profile_set_up_swipe_to_continue">Swipe to continue</string>
    <string name="profile_set_up_welcome">Welcome!\n\nPlease begin by setting up a profile</string>
    <string name="profile_set_up_save_profile">Save Profile</string>
    <string name="profile_set_up_you_need_to_enter">You need to enter your %1$s</string>
    <string name="profile_set_up_desired_weight">Your weight goal (kgs)</string>
    <string name="today_fragment_title">Today</string>
    <string name="today_fragment_daily_intake">Daily intake</string>
    <string name="today_fragment_information">Information</string>
    <string name="today_fragment_your_calorie_goal">Your calorie goal is:</string>
    <string name="today_fragment_your_fat_goal">Your fat goal is:</string>
    <string name="today_fragment_your_sat_fat_goal">Your saturated fat goal is:</string>
    <string name="today_fragment_your_carbs_goal">Your carbohydrate goal is:</string>
    <string name="today_fragment_your_sugar_goal">Your sugar goal is:</string>
    <string name="today_fragment_your_salt_goal">Your salt goal is:</string>
    <string name="today_fragment_your_sodium_goal">Your sodium goal is:</string>
    <string name="today_fragment_your_protein_goal">Your protein goal is:</string>
    <string name="today_fragment_you_have_exceeded_your_goal">You have exceeded your goal by:</string>
    <string name="history_fragment_title">History</string>
    <string name="history_fragment_are_you_sure">Are you sure you want to delete %1$s? This cannot be undone</string>
    <string name="lookup_fragment_title">Barcode Search</string>
    <string name="lookup_fragment_scan">Scan</string>
    <string name="lookup_fragment_your_barcode_needs_13_digits">Please enter a 13 digit
        barcode</string>
    <string name="lookup_fragment_serving_size">Serving size:</string>
    <string name="lookup_fragment_manual_barcode_entry">Manual barcode entry</string>
    <string name="search_fragment_title">Search</string>
    <string name="goals_fragment_title">Your Goals</string>
    <string name="goals_fragment_update_successful">Your goals have been updated</string>
    <string name="goals_fragment_update_failure">Your goals have not been updated</string>
    <string name="goals_fragment_your_goals">Your goals:</string>
    <string name="goals_fragment_edit_goals">Edit</string>
    <string name="fragment_privacy_policy_title">Privacy Policy</string>
    <string name="progress_fragment_title">Progress</string>
    <string name="progress_fragment_log_your_weight">Log your weight</string>
    <string name="addtodatabase_fragment_title">Add To Database</string>
    <string name="diary_fragment_title">Diary</string>
    <string name="diary_fragment_todays_entries">Today\'s Entries</string>
    <string name="search_results_result_added">%1$s has been added to your food diary</string>
    <string name="analysis_fragment_title">Diet Analysis</string>
    <string name="analysis_fragment_during_month_year">During %1$s, you went over your goals...</string>
    <string name="analysis_fragment_you_ate_the_most_on">The most %1$s on %2$s</string>
    <string name="analysis_fragment_times_gone_over_goals">You went over your goals %1$s times</string>
    <string name="analysis_fragment_personal_goal">Your personal goal is %1$s</string>
    <string name="analysis_fragment_based_on">Based on %1$s items</string>
    <string name="analysis_fragment_low_entries_warning">This information may not be reliable due to the low number of entries.</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="settings_show_full_days">Show days in lists</string>
    <string name="settings_show_full_days_explained">Enable this to allow for the showing of the day in lists</string>
    <string name="settings_become_a_beta_tester">Become a beta tester!</string>
    <string name="settings_units">Units of Measurement</string>
    <string name="settings_energy_units">Energy</string>
    <string name="settings_kcals">KCals</string>
    <string name="settings_KJ">KJ</string>
    <string name="about_fragment_title">About</string>
    <string name="about_fragment_version">Version: </string>
    <string name="about_fragment_faq">Frequently Asked Questions</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="profile_fragment_name">Name</string>
    <string name="profile_fragment_gender">Gender</string>
    <string name="profile_fragment_male">Male</string>
    <string name="profile_fragment_female">Female</string>
    <string name="profile_fragment_weight">Weight (kgs)</string>
    <string name="profile_fragment_height">Height (m)</string>
    <string name="profile_fragment_save_changes">Save Changes</string>
    <string name="profile_fragment_saved">Profile updated</string>
    <string name="profile_fragment_your_BMI_is">Your BMI is %1$s</string>
    <string name="profile_fragment_BMI_underweight">Underweight: less than 18.5</string>
    <string name="profile_fragment_BMI_normal">Healthy weight: 18.5 \u2013 24.9 (woohoo!)</string>
    <string name="profile_fragment_BMI_overweight">Overweight: 25 \u2013 29.9</string>
    <string name="profile_fragment_BMI_obese">Obesity: 30+</string>
    <string name="new_entry_title">New Entry</string>
    <string name="new_entry_food_name">Food Name</string>
    <string name="new_entry_save">Save</string>
    <string name="new_entry_barcode_number">Barcode Number</string>
    <string name="new_entry_attribute_missing">Please enter the %1$s</string>
    <string name="recipe_keep">Recipe Keep</string>
    <string name="recipe_keep_click_to_download">Click the icon to download \nRecipe Keep</string>
    <string name="recipe_keep_an_easy_way_to_store">An easy way to store your recipes</string>
    <string name="recipe_keep_now_leaving_application">The Google Play store will now be opened, are you sure?</string>
    <string name="calories">Calories</string>
    <string name="calories_abbv">Cal:</string>
    <string name="fat">Fat</string>
    <string name="fats">Fats</string>
    <string name="fat_abbv">F:</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="saturated_fats">Saturated Fats</string>
    <string name="saturated_fat_abbv">SF:</string>
    <string name="sodium">Sodium</string>
    <string name="sodium_abbv">So:</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="carbohydrate_abbv">C:</string>
    <string name="protein">Protein</string>
    <string name="proteins">Proteins</string>
    <string name="protein_abbv">P:</string>
    <string name="sugar">Sugar</string>
    <string name="sugars">Sugars</string>
    <string name="sugar_abbv">Su:</string>
    <string name="salt">Salt</string>
    <string name="salts">Salts</string>
    <string name="salt_abbv">Sa:</string>
    <string name="grams_abbv">g</string>
    <string name="grams">grams</string>
    <string name="kg">kg</string>
    <string name="weigh">Weight</string>
    <string name="slash"> / </string>
    <string name="cancel">Cancel</string>
    <string name="save_changes">Save Changes</string>
    <string name="last_month">Last Month</string>
    <string name="year">Year</string>
    <string name="delete">delete</string>
    <string name="colon">:</string>
    <string name="there_is_nothing_here">There doesn\'t seem to be anything here yet</string>
    <string name="error_sorry_check_your_network_settings">Please check your network settings</string>
    <string name="error_item_does_not_exist">Item does not exist</string>
    <string name="error_please_set_goals_first">Sorry! It appears you have not set goals yet</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_barcode_scanner">BarcodeScannerActivity</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the
        camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="barcode_reader_tap_to_capture">Tap to capture when the barcode is
        detected</string>
    <string name="barcode_reader_no_barcode_detected">No barcode detected</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="mondays">Mondays</string>
    <string name="tuesdays">Tuesdays</string>
    <string name="wednesdays">Wednesdays</string>
    <string name="thursdays">Thursdays</string>
    <string name="fridays">Fridays</string>
    <string name="saturdays">Saturdays</string>
    <string name="sundays">Sundays</string>
    <string name="title_activity_analysis">AnalysisActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profile_set_up">ProfileSetUp</string>
    <string name="title_activity_settings">Settings</string>
    <string name="facebook_app_id">873370576122728</string>
</resources>