<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_today" android:icon="@drawable/icon_today_black"
            android:title="@string/today_fragment_title" />
        <item android:id="@+id/nav_diary" android:icon="@drawable/icon_import_contacts_black"
            android:title="@string/diary_fragment_title" />
        <item android:id="@+id/nav_analysis" android:icon="@drawable/ic_data_usage_black_24dp"
            android:title="@string/analysis_fragment_title" />
        <item android:id="@+id/nav_lookup" android:icon="@drawable/icon_camera_black"
            android:title="@string/lookup_fragment_title" />
        <!--<item android:id="@+id/nav_search" android:icon="@drawable/icon_search_black"
            android:title="@string/search_fragment_title" /> -->
        <item android:id="@+id/nav_history" android:icon="@drawable/icon_history_black"
            android:title="@string/history_fragment_title" />
        <item android:id="@+id/nav_goals" android:icon="@drawable/icon_assessment_black"
            android:title="@string/goals_fragment_title" />
        <item android:id="@+id/nav_progress" android:icon="@drawable/icon_timeline_black"
            android:title="@string/progress_fragment_title" />
        <item android:id="@+id/nav_recipe_keep" android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/recipe_keep" />
    </group>

    <item android:title="">
        <menu>
            <!--<item android:id="@+id/nav_addtodatabase" android:title="@string/addtodatabase_fragment_title" />-->
            <item android:id="@+id/nav_about" android:title="@string/about_fragment_title" />
        </menu>
    </item>
</menu>