<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright Karl Jones 2016 -->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context="com.karl.barcodereader.MainActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerHorizontal="true"
        android:id="@+id/lookupProgressBar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/barcode_header"
        android:id="@+id/status_message"
        android:textColor="#000000"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:textAlignment="center"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/barcode_value"
        android:textColor="#000000"
        android:layout_below="@id/status_message"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="110dp"
        android:layout_alignEnd="@id/status_message"
        android:layout_alignRight="@id/status_message"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read_barcode"
        android:id="@+id/read_barcode"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_focus"
        android:textColor="#000000"
        android:id="@+id/auto_focus"
        android:layout_above="@id/read_barcode"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="77dp"
        android:checked="false" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_flash"
        android:id="@+id/use_flash"
        android:textColor="#000000"
        android:layout_alignTop="@id/auto_focus"
        android:layout_alignEnd="@id/barcode_value"
        android:layout_alignRight="@id/barcode_value"
        android:checked="false" />

</RelativeLayout>
