<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.karl.fragments.ProfileFragment"
    android:orientation="vertical" android:focusable="true" android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <EditText
            android:maxLength="55"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:fontFamily="sans-serif"
            android:id="@+id/user_name"
            android:hint="@string/profile_fragment_name"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_fragment_gender"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="15dp"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_gender"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="15dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <EditText
            android:maxLength="55"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:fontFamily="sans-serif"
            android:id="@+id/user_height"
            android:hint="@string/profile_fragment_height"
            android:inputType="textCapWords|numberDecimal"
            android:imeOptions="actionNext"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <EditText
            android:maxLength="55"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:fontFamily="sans-serif"
            android:id="@+id/user_weight"
            android:hint="@string/profile_fragment_weight"
            android:inputType="textCapWords|numberDecimal"
            android:imeOptions="actionNext"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/profile_bmi_display"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/profile_bmi_display_information"/>

    <Button
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/save_changes"
        android:id="@+id/save_changes"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
